--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^6.1.6",
     "@react-pdf/renderer": "^4.0.0",
     "electron-serve": "^1.3.0",
-    "electron-store": "^8.2.0"
+    "electron-store": "^8.2.0",
+    "react-pdf": "^9.1.1"
   },
   "devDependencies": {
     "electron": "^31.0.1",
